--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,9 @@ body {
 .lh-1 {
   line-height: 1 !important;
 }
+.ant-layout-content .site-layout-background {
+  padding: 1.6%;
+}
 .yellow {
   color: yellow;
 }
@@ -103,6 +106,15 @@ table {
 }
 .ant-table-tbody > tr > td:nth-child(2) {
   color: #262e80 !important;
+}
+.ant-table-tbody > tr > td:nth-child(2) {
+  color: #262e80 !important;
+}
+.w-title {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 462px;
 }
 .ant-table-tbody > tr > td:nth-child(7) {
   color: rgb(101, 173, 101) !important;
